# cuopt

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  build.sh  dependencies.yaml
.claude-plugin/: marketplace.json
.cursor/rules/: skill-evolution.mdc
.github/workflows/: build.yaml  build_images.yaml  build_test_publish_images.yaml  nightly.yaml  pr.yaml  test.yaml  trigger-breaking-change-alert.yaml
benchmarks/linear_programming/cuopt/: run_mip.cpp
benchmarks/linear_programming/utils/: get_datasets.py
ci/: README.md  test_cpp.sh  validate_wheel.sh
ci/docker/: Dockerfile  entrypoint.sh
conda/environments/: all_cuda-129_arch-aarch64.yaml  all_cuda-129_arch-x86_64.yaml  all_cuda-131_arch-aarch64.yaml  all_cuda-131_arch-x86_64.yaml
cpp/: CMakeLists.txt  cuopt_cli.cpp
cpp/docs/: DEVELOPER_GUIDE.md  grpc-server-architecture.md
cpp/include/cuopt/: error.hpp
cpp/include/cuopt/linear_programming/: constants.h  cpu_optimization_problem.hpp  cpu_optimization_problem_solution.hpp  optimization_problem.hpp  optimization_problem_interface.hpp  optimization_problem_solution.hpp  optimization_problem_solution_interface.hpp  optimization_problem_utils.hpp  solver_settings.hpp
cpp/libmps_parser/: CMakeLists.txt
cpp/libmps_parser/include/mps_parser/: data_model_view.hpp  mps_data_model.hpp  mps_writer.hpp  parser.hpp
cpp/libmps_parser/include/mps_parser/utilities/: span.hpp
cpp/libmps_parser/src/: data_model_view.cpp  mps_data_model.cpp  mps_parser.cpp  mps_parser.hpp  mps_writer.cpp
cpp/libmps_parser/src/utilities/: error.hpp
cpp/libmps_parser/tests/: CMakeLists.txt  mps_parser_test.cpp
cpp/src/barrier/: barrier.cu  dense_vector.hpp  second_order_cone.cuh  second_order_cone_kernels.cuh  second_order_cone_reduction.cuh  sparse_cholesky.cuh
cpp/src/branch_and_bound/: branch_and_bound.cpp  branch_and_bound.hpp  mip_node.hpp  pseudo_costs.cpp  pseudo_costs.hpp  shared_strong_branching_context.hpp
cpp/src/cuts/: cuts.cpp  cuts.hpp
cpp/src/dual_simplex/: basis_updates.cpp  phase2.cpp  presolve.cpp  presolve.hpp  scaling.cpp  simplex_solver_settings.hpp  solve.cpp  solve.hpp  user_problem.hpp  vector_math.cuh
cpp/src/grpc/: cuopt_default_grpc_port.h  cuopt_remote.proto  cuopt_remote_service.proto  grpc_problem_mapper.cpp  grpc_settings_mapper.cpp  grpc_solution_mapper.cpp
cpp/src/grpc/client/: grpc_client.cpp  grpc_client.hpp
cpp/src/grpc/server/: grpc_field_element_size.hpp  grpc_server_main.cpp  grpc_server_types.hpp  grpc_worker_infra.cpp
cpp/src/math_optimization/: solver_settings.cu
cpp/src/mip_heuristics/: CMakeLists.txt  early_heuristic.cuh  mip_scaling_strategy.cu  mip_scaling_strategy.cuh  solve.cu  solver.cu  solver.cuh  solver_context.cuh  solver_solution.cu
cpp/src/mip_heuristics/diversity/: diversity_config.hpp  diversity_manager.cu  population.cu
cpp/src/mip_heuristics/feasibility_jump/: early_cpufj.cu  early_cpufj.cuh  early_gpufj.cu  early_gpufj.cuh  feasibility_jump.cu  feasibility_jump.cuh  fj_cpu.cu  fj_cpu.cuh
cpp/src/mip_heuristics/local_search/: local_search.cu  local_search.cuh
cpp/src/mip_heuristics/presolve/: gf2_presolve.hpp  probing_cache.cu  third_party_presolve.cpp  third_party_presolve.hpp
cpp/src/mip_heuristics/problem/: presolve_data.cu  presolve_data.cuh  problem.cu  problem.cuh
cpp/src/mip_heuristics/relaxed_lp/: relaxed_lp.cu
cpp/src/mip_heuristics/solution/: solution.cu  solution.cuh
cpp/src/pdlp/: cpu_optimization_problem.cpp  optimization_problem.cu  pdlp.cu  pdlp.cuh  pdlp_constants.hpp  solve.cu  solver_settings.cu  solver_solution.cu  translate.hpp
cpp/src/pdlp/restart_strategy/: pdlp_restart_strategy.cu
cpp/src/pdlp/termination_strategy/: infeasibility_information.cu  termination_strategy.cu  termination_strategy.hpp
cpp/src/pdlp/utilities/: ping_pong_graph.cu
cpp/src/routing/: ges_solver.cu
cpp/src/utilities/: cuda_helpers.cuh  sparse_matrix_helpers.hpp  version_info.cpp
cpp/tests/: CMakeLists.txt
cpp/tests/distance_engine/: CMakeLists.txt
cpp/tests/dual_simplex/: CMakeLists.txt
cpp/tests/dual_simplex/unit_tests/: second_order_cone_kernels.cu  second_order_cone_test.cu  solve_barrier.cu
cpp/tests/linear_programming/: CMakeLists.txt  pdlp_test.cu
cpp/tests/linear_programming/c_api_tests/: c_api_test.c  c_api_tests.cpp
cpp/tests/linear_programming/grpc/: CMakeLists.txt  grpc_client_test.cpp  grpc_integration_test.cpp  grpc_pipe_serialization_test.cpp
cpp/tests/linear_programming/unit_tests/: optimization_problem_test.cu  presolve_test.cu  solution_interface_test.cu
cpp/tests/mip/: CMakeLists.txt  bounds_standardization_test.cu  cuts_test.cu  determinism_test.cu  elim_var_remap_test.cu  feasibility_jump_tests.cu  heuristics_hyper_params_test.cu  load_balancing_test.cu  miplib_test.cu  multi_probe_test.cu  presolve_test.cu  server_test.cu  unit_test.cu
cpp/tests/qp/: CMakeLists.txt
cpp/tests/qp/unit_tests/: mps_writer_test.cpp
cpp/tests/routing/: CMakeLists.txt
cpp/tests/routing/unit_tests/: breaks.cu  set_shmem_of_kernel.cu
cpp/tests/utilities/: CMakeLists.txt  base_fixture.hpp
datasets/mip/: dominating_set.mps
datasets/qcqp/: QC_Test_1.mps  p0033_qc1.mps  socp1.mps  socp2.mps  socp3.mps  socp4.mps
docs/cuopt/source/: conf.py  faq.rst  index.rst  install.rst  introduction.rst  lp-qp-milp-settings.rst
docs/cuopt/source/_static/: install-selector.js
docs/cuopt/source/cuopt-cli/: quick-start.rst
docs/cuopt/source/cuopt-grpc/: advanced.rst  api.rst  examples.rst  grpc-server-architecture.md  index.rst  quick-start.rst
docs/cuopt/source/cuopt-server/: index.rst
python/cuopt/cuopt/linear_programming/: problem.py
python/cuopt_server/cuopt_server/tests/: test_lp.py
regression/: get_datasets.py
skills/cuopt-developer/: SKILL.md
skills/cuopt-developer/resources/: python_bindings.md
skills/cuopt-installation-developer/: SKILL.md
skills/cuopt-routing-api-python/: SKILL.md
skills/cuopt-user-rules/: SKILL.md
skills/lp-milp-formulation/: SKILL.md
skills/skill-evolution/: SKILL.md
(+39 files in other folders)
