# cmake-format: off
# SPDX-FileCopyrightText: Copyright (c) 2024-2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
# cmake-format: on

cmake_minimum_required(VERSION 3.26.4 FATAL_ERROR)
include(../../cmake/rapids_config.cmake)
include(rapids-cmake)
include(rapids-cpm)
include(rapids-export)
include(rapids-find)

project(
  MPS_PARSER
  VERSION "${RAPIDS_VERSION}"
  LANGUAGES CXX
)

# Disable C++20 module scanning as the codebase doesn't use modules
set(CMAKE_CXX_SCAN_FOR_MODULES OFF CACHE BOOL "Disable C++20 module scanning")

# Write the version header
rapids_cmake_write_version_file(include/mps_parser/version_config.hpp)

# ##################################################################################################
# - build type ------------------------------------------------------------------------------------

# Set a default build type if none was specified
rapids_cmake_build_type(Release)

# #############################################################################
# - User Options  ------------------------------------------------------------
option(BUILD_TESTS "Configure CMake to build tests" ON)
option(MPS_PARSER_WITH_BZIP2 "Build with bzip2 decompression" ON)
option(MPS_PARSER_WITH_ZLIB "Build with zlib decompression" ON)

message(VERBOSE "cuOpt: Build mps-parser unit-tests: ${BUILD_TESTS}")

# ##################################################################################################
# - compiler options ------------------------------------------------------------------------------

set(MPS_PARSER_CXX_FLAGS "")

if(CMAKE_COMPILER_IS_GNUCXX)
  list(APPEND MPS_PARSER_CXX_FLAGS -Werror -Wno-error=deprecated-declarations)
endif(CMAKE_COMPILER_IS_GNUCXX)

if(MPS_PARSER_WITH_BZIP2)
  find_package(BZip2 REQUIRED)
  add_compile_definitions(-DMPS_PARSER_WITH_BZIP2)
endif(MPS_PARSER_WITH_BZIP2)

if(MPS_PARSER_WITH_ZLIB)
  find_package(ZLIB REQUIRED)
  add_compile_definitions(-DMPS_PARSER_WITH_ZLIB)
endif(MPS_PARSER_WITH_ZLIB)

if(DEFINE_ASSERT)
  add_definitions(-DASSERT_MODE)
endif(DEFINE_ASSERT)


# ##################################################################################################
# - find CPM based dependencies  ------------------------------------------------------------------
rapids_cpm_init()
if(BUILD_TESTS)
  include(cmake/thirdparty/get_gtest.cmake)
endif()

add_library(mps_parser SHARED
  src/data_model_view.cpp
  src/mps_data_model.cpp
  src/mps_parser.cpp
  src/mps_writer.cpp
  src/parser.cpp
  src/writer.cpp
  src/utilities/cython_mps_parser.cpp
)

set_target_properties(mps_parser
  PROPERTIES BUILD_RPATH "\$ORIGIN"
  INSTALL_RPATH "\$ORIGIN"

  # set target compile options
  CXX_STANDARD 20
  CXX_STANDARD_REQUIRED ON
  INTERFACE_POSITION_INDEPENDENT_CODE ON
  CXX_SCAN_FOR_MODULES OFF
)

target_compile_options(mps_parser
  PRIVATE "$<$<COMPILE_LANGUAGE:CXX>:${MPS_PARSER_CXX_FLAGS}>"
)

if(WRITE_FATBIN)
  file(WRITE "${MPS_PARSER_BINARY_DIR}/fatbin.ld"
    [=[
  SECTIONS
  {
    .nvFatBinSegment : { *(.nvFatBinSegment) }
    .nv_fatbin : { *(.nv_fatbin) }
  }
  ]=])
  target_link_options(mps_parser PRIVATE "${MPS_PARSER_BINARY_DIR}/fatbin.ld")
endif()

add_library(cuopt::mps_parser ALIAS mps_parser)

# ##################################################################################################
# - include paths ---------------------------------------------------------------------------------
target_include_directories(mps_parser
  PRIVATE
  "${CMAKE_CURRENT_SOURCE_DIR}/../thirdparty"
  "${CMAKE_CURRENT_SOURCE_DIR}/../src"
  "${CMAKE_CURRENT_SOURCE_DIR}/src"
  PUBLIC
  "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
  "$<INSTALL_INTERFACE:include>"
)

if(MPS_PARSER_WITH_BZIP2)
    target_include_directories(mps_parser PRIVATE BZip2::BZip2)
endif(MPS_PARSER_WITH_BZIP2)

if(MPS_PARSER_WITH_ZLIB)
    target_include_directories(mps_parser PRIVATE ZLIB::ZLIB)
endif(MPS_PARSER_WITH_ZLIB)

# ##################################################################################################
# - generate tests --------------------------------------------------------------------------------
if(BUILD_TESTS)
  include(CTest)
  add_subdirectory(tests)
endif(BUILD_TESTS)


# ##################################################################################################
# * mps_parser Install ----------------------------------------------------------------------------
rapids_cmake_install_lib_dir(mps_parser_lib_dir)
install(TARGETS mps_parser
  DESTINATION ${mps_parser_lib_dir}
  EXPORT mps-parser-exports)

install(DIRECTORY include/mps_parser/
  DESTINATION include/mps_parser)

install(FILES ${CMAKE_CURRENT_BINARY_DIR}/include/mps_parser/version_config.hpp
  DESTINATION include/mps_parser)

rapids_export(INSTALL mps_parser
  EXPORT_SET mps-parser-exports
  GLOBAL_TARGETS mpsparser
  NAMESPACE cuopt::
)
